--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,11 +1,9 @@
-use_frameworks!
+#use_frameworks!
 
 target 'shw-ios-opus-a_Example' do
-  pod 'shw-ios-opus-a', :path => '../'
+  pod 'SHWOpus', :path => '../'
 
   target 'shw-ios-opus-a_Tests' do
     inherit! :search_paths
-
-    pod 'Kiwi'
   end
 end
